scripts/nullaway/annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:13: error: [NullAway] initializer method does not guarantee @NonNull fields method (line 9), url (line 10), protocol (line 11) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Request(){};
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:7: error: [NullAway] initializer method does not guarantee @NonNull fields path (line 5), extension (line 6) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Url(){};
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:11: error: [NullAway] initializer method does not guarantee @NonNull field date (line 8) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Date(){
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:17: error: [NullAway] initializer method does not guarantee @NonNull fields userIp (line 11), userTime (line 12), request (line 13), userStatus (line 14), size (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Record(){}
	       ^
    (see http://t.uber.com/nullaway )
../annotator/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allparsers/LogPars.java:17: error: [NullAway] dereferenced expression logStr is @Nullable
		String[] recordStr2= logStr.split(System.getProperty("line.separator"));
		                           ^
    (see http://t.uber.com/nullaway )
5 errors
